[View] Prevent accordion to cut the overflow on additionnal analyses component

--- a/BSWA/src/main/webapp/WEB-INF/css/overload-jquery-ui.css
+++ b/BSWA/src/main/webapp/WEB-INF/css/overload-jquery-ui.css
@@ -1,17 +1,21 @@
 .ui-dialog {
-	-webkit-box-shadow: 0px 0px 30px 0px rgba(50, 50, 50, 0.75);
-	-moz-box-shadow:    0px 0px 30px 0px rgba(50, 50, 50, 0.75);
-	box-shadow:         0px 0px 30px 0px rgba(50, 50, 50, 0.75);
+	-webkit-box-shadow: 0px 0px 30px 0px rgba(50, 50, 50, 0.75) !important;
+	-moz-box-shadow:    0px 0px 30px 0px rgba(50, 50, 50, 0.75) !important;
+	box-shadow:         0px 0px 30px 0px rgba(50, 50, 50, 0.75) !important;
 }
 
 .ui-widget-header {
-	border: 1px solid #3961A8;
+	border: 1px solid #3961A8 !important;
 }
 
 .ui-widget-overlay  {
-	background: url("/img/back.png") repeat scroll 50% 50% #666666;
+	background: url("/img/back.png") repeat scroll 50% 50% #666666 !important;
 }
 
-.accComplete > div {
-	overflow: visible;
+.overflow-visible {
+	overflow: visible !important;
+}
+
+.overflow-auto {
+	overflow: auto !important;
 }
